5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1826_3184.log
== TEST (2019-06-12 18:38:03) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0
for i in range(s):
	aux = v[i]
	for j in range(0, s, -1)
	v[i] = v[j]
	
prin(v)
-- ERROR:
File "XXXX", line 9
    for j in range(0, s, -1)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:38:08) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0
for i in range(s):
	aux = v[i]
	for j in range(0, s, -1):
	v[i] = v[j]
	
prin(v)
-- ERROR:
File "XXXX", line 10
    v[i] = v[j]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:38:13) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0
for i in range(s):
	aux = v[i]
	for j in range(0, s, -1):
		v[i] = v[j]
	
prin(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:38:37) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0
for i in range(s):
	aux = v[i]
	for j in range(0, s, -1):
		v[i] = v[j]
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:38:48) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0
for i in range(s):
	aux = v[i]
	for j in range(0, s, -1):
		v[i] = v[j]
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:39:21) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0
for i in range(s):
	aux = v[i]
	for j in range(s, 0, -1):
		v[i] = v[j]
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:39:53) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0
for i in range(s):
	aux = v[i]
	for j in range(s - 1, 0, -1):
		v[i] = v[j]
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:40:17) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0
for i in range(s):
	aux = v[i]
	for j in range(s, 0, -1):
		v[i] = v[j]
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:40:55) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0
for i in range(s):
	aux = v[i]
	for j in range(-s):
		v[i] = v[j]
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:41:00) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0
for i in range(s):
	aux = v[i]
	for j in range(-s):
		v[i] = v[j]
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:41:04) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0
for i in range(s):
	aux = v[i]
	for j in range(-s):
		v[i] = v[j]
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:41:13) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0
for i in range(s):
	aux = v[i]
	for j in range(s, 1, -1):
		v[i] = v[j]
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:42:20) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0
for i in range(s):
	aux = v[i]
	v[i] = v[s-i]
	
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:43:04) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0
for i in range(s):
	aux = v[i]
	v[i] = v[s-i-1]
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:46:00) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)
z = zeros(s)

for i in range(0, s, -1):
	z[s-i] = v[i]
	
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:46:11) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)
z = zeros(s)

for i in range(s, 0, -1):
	z[s-i] = v[i]
	
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:46:32) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)
z = zeros(s)

for i in range(s, 0, -1):
	z[s-i-1] = v[i]
	
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:46:53) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)
z = zeros(s)

for i in range(s-1, 0, -1):
	z[s-i] = v[i]
	
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:47:05) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)
z = zeros(s)

for i in range(s-1, 0, -1):
	z[s] = v[i]
	
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:47:36) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)
z = zeros(s)

for i in range(s-1, 0, -1):
	z[s-i-1] = v[i]
	
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:47:48) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)
z = zeros(s)

for i in range(s-1, 1, -1):
	z[s-i-1] = v[i]
	
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:48:02) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)
z = zeros(s)

for i in range(s, 0, -1):
	z[s-i-1] = v[i]
	
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:48:30) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)
z = zeros(s)

for i in range(s):
	z[s - i] = v[i]
	
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:49:09) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)
z = zeros(s)

for i in range(s, 1):
	z[s - i] = v[i+1]
	
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:49:12) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)
z = zeros(s)

for i in range(s, 1):
	z[s - i] = v[i+1]
	
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:50:19) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)
z = zeros(s+1)

for i in range(s):
	z[s-1] = v[i]
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:50:31) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)
z = zeros(s+1)

for i in range(s):
	print(i)
	z[s-1] = v[i]
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:51:38) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)
z = zeros(s+1)

for i in range(s, 0, -1):
	print(i)
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:51:52) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)
z = zeros(s+1)

for i in range(s, -1, -1):
	print(i)
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:52:33) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)
z = zeros()

for i in range(s-1, -1, -1):
	z[i]
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:52:39) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)
z = zeros(s)

for i in range(s-1, -1, -1):
	z[i]
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:52:49) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)
z = zeros(s)

for i in range(s-1, -1, -1):
	print(i)
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:53:19) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)
z = zeros(s)

for i in range(s-1, -1, -1):
	z[s-i-1] = v[i]
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:53:31) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)
z = zeros(s, dtype=int)

for i in range(s-1, -1, -1):
	z[s-i-1] = v[i]
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 18:54:08) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)
z = zeros(s)

for i in range(s-1, -1, -1):
	z[s-i-1] = v[i]
print(z)
-- EXECUTION TIME:
1.2152
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1826/3184/main.py", line 8, in <module>
    z[s-i-1] = v[i]
ValueError: could not convert string to float: 'a'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:54:10) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)
z = zeros(s)

for i in range(s-1, -1, -1):
	z[s-i-1] = v[i]
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:55:55) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0

for i in range(s-1, -1, -1):
	print(i)
	aux = v[i]
	v[s-i-1] = v[i]
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:56:03) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0

for i in range(s-1, -1, -1):
	print(i)
	aux = v[i]
	v[s-i-1] = v[i]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:57:02) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0

for i in range(s-1, -1, -1):
	print(i)
	aux = v[i]
	v[i] = v[s-i-1]
	v[s-i-1] = aux
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:57:44) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0

for i in range(s-1, -1, -1):
	print(i)
	aux = v[i]
	v[i] = v[s-i-1]
	v[s-i-1] = aux
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:58:45) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0

for i in range(s-1, -1, -1):
	print(i)
	aux = v[i]
	v[i] = v[s-i]
	v[s-i-1] = aux
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:59:46) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0

for i in range(s-1, -1, -1):
	print(i)
	aux = v[i]
	v[s-i-1] = v[i]
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:00:37) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0

for i in range(s-1, -1, -1):
	print(i)
	aux = v[s-i-1]
	v[s-i-1] = v[i]
	v[i] = aux
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:01:23) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0

for i in range(s):
	print(i)
	aux = v[i]
	v[i] = v[s-i-1]
	v[s-i-1] = aux
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:01:45) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0

for i in range(s):
	print(i)
	aux = v[i]
	print(aux)
	v[i] = v[s-i-1]
	v[s-i-1] = aux
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:02:43) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0

for i in range(s):
	print(i)
	aux = v[i]
	print(aux)
	v[i] = v[s-1-i]

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:03:23) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)

aux = 0

for i in range(s):
	print(i)
	aux = v[i]
	v[i] = v[s-1-i]
	v[s-1-i] = aux

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:04:17) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)


for i in range(s):
	print(i)
	aux = 0
	aux = v[i]
	v[i] = v[s-1-i]
	v[s-i-1] = aux

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:05:13) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)


for i in range(s):
	print(i)
	print(v[s-1-i])
	aux = 0
	aux = v[i]
	v[i] = v[s-1-i]
	v[s-i-1] = aux

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:05:24) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)


for i in range(s):
	print('i',i)
	print(v[s-1-i])
	aux = 0
	aux = v[i]
	v[i] = v[s-1-i]
	v[s-i-1] = aux

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:05:58) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)


for i in range(s-i):
	print('i',i)
	print(v[s-1-i])
	aux = 0
	aux = v[i]
	v[i] = v[s-1-i]
	v[s-i-1] = aux

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:06:01) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)


for i in range(s-1):
	print('i',i)
	print(v[s-1-i])
	aux = 0
	aux = v[i]
	v[i] = v[s-1-i]
	v[s-i-1] = aux

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:06:15) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)


for i in range(s-1):
	aux = 0
	aux = v[i]
	v[i] = v[s-1-i]
	v[s-i-1] = aux

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:06:19) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)


for i in range(s-1):
	aux = 0
	aux = v[i]
	v[i] = v[s-1-i]
	v[s-i-1] = aux

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:06:34) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)


for i in range(s-1):
	aux = 0
	aux = v[i]
	v[i] = v[s-1-i]
	v[s-i-1] = aux

print(v)
-- EXECUTION TIME:
1.17002
-- TEST CASE 1:
---- input:
['x','p','m','k','e','c','a']
---- correct output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
---- user output:
['a' 'p' 'm' 'k' 'e' 'c' 'x']
-- TEST CASE 2:
---- input:
['f','e','e','d','c','b','a']
---- correct output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
---- user output:
['a' 'e' 'e' 'd' 'c' 'b' 'f']
-- TEST CASE 3:
---- input:
['n','l','k','i','e','b']
---- correct output:
['b' 'e' 'i' 'k' 'l' 'n']
---- user output:
['b' 'l' 'k' 'i' 'e' 'n']
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:06:45) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)


for i in range(s-1):
	aux = 0
	aux = v[i]
	v[i] = v[s-1-i]
	v[s-i-1] = aux

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:07:13) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v)


for i in range(s-1):
	aux = 0
	aux = v[i]
	v[i] = v[s-1-i]
	v[s-i-1] = aux

print(v)
-- EXECUTION TIME:
1.21831
-- TEST CASE 1:
---- input:
['x','p','m','k','e','c','a']
---- correct output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
---- user output:
['a' 'p' 'm' 'k' 'e' 'c' 'x']
-- TEST CASE 2:
---- input:
['f','e','e','d','c','b','a']
---- correct output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
---- user output:
['a' 'e' 'e' 'd' 'c' 'b' 'f']
-- TEST CASE 3:
---- input:
['n','l','k','i','e','b']
---- correct output:
['b' 'e' 'i' 'k' 'l' 'n']
---- user output:
['b' 'l' 'k' 'i' 'e' 'n']
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:07:29) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v) - 1


for i in range(s):
	aux = 0
	aux = v[i]
	v[i] = v[s-i]
	v[s-i] = aux

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:07:39) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v) - 1


for i in range(s):
	aux = 0
	aux = v[i]
	v[i] = v[s-i]
	v[s-i] = aux

print(v)
-- EXECUTION TIME:
0.898178
-- TEST CASE 1:
---- input:
['x','p','m','k','e','c','a']
---- correct output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
---- user output:
['a' 'p' 'm' 'k' 'e' 'c' 'x']
-- TEST CASE 2:
---- input:
['f','e','e','d','c','b','a']
---- correct output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
---- user output:
['a' 'e' 'e' 'd' 'c' 'b' 'f']
-- TEST CASE 3:
---- input:
['n','l','k','i','e','b']
---- correct output:
['b' 'e' 'i' 'k' 'l' 'n']
---- user output:
['b' 'l' 'k' 'i' 'e' 'n']
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:07:42) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")))
s = size(v) - 1


for i in range(s):
	aux = 0
	aux = v[i]
	v[i] = v[s-i]
	v[s-i] = aux

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:08:10) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1


for i in range(s):
	aux = 0
	aux = v[i]
	v[i] = v[s-i]
	v[s-i] = aux

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:08:22) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1


for i in range(s):
	aux = 0
	aux = v[i]
	v[i] = v[s-i]
	v[s-i] = aux

print(v)
-- EXECUTION TIME:
0.871995
-- TEST CASE 1:
---- input:
['x','p','m','k','e','c','a']
---- correct output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
---- user output:
['a' 'p' 'm' 'k' 'e' 'c' 'x']
-- TEST CASE 2:
---- input:
['f','e','e','d','c','b','a']
---- correct output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
---- user output:
['a' 'e' 'e' 'd' 'c' 'b' 'f']
-- TEST CASE 3:
---- input:
['n','l','k','i','e','b']
---- correct output:
['b' 'e' 'i' 'k' 'l' 'n']
---- user output:
['b' 'l' 'k' 'i' 'e' 'n']
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:24:13) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1


for i in range(s):
	aux = 0
	aux = v[i]
	v[i] = v[s-i]
	v[s-i] = aux

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:24:35) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1


for i in range(s):
	aux = 0
	aux = v[i]
	v[i] = v[s-i]
	v[s-i] = aux

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:24:42) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1


for i in range(s):
	aux = 0
	aux = v[i]
	v[i] = v[s-i]
	v[s-i] = aux

print(v)
-- EXECUTION TIME:
1.20416
-- TEST CASE 1:
---- input:
['x','p','m','k','e','c','a']
---- correct output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
---- user output:
['a' 'p' 'm' 'k' 'e' 'c' 'x']
-- TEST CASE 2:
---- input:
['f','e','e','d','c','b','a']
---- correct output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
---- user output:
['a' 'e' 'e' 'd' 'c' 'b' 'f']
-- TEST CASE 3:
---- input:
['n','l','k','i','e','b']
---- correct output:
['b' 'e' 'i' 'k' 'l' 'n']
---- user output:
['b' 'l' 'k' 'i' 'e' 'n']
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:24:46) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1


for i in range(s):
	aux = 0
	aux = v[i]
	v[i] = v[s-i]
	v[s-i] = aux

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:25:06) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1


for i in range(s):
	aux = 0
	aux = v[i]
	v[i] = v[s-i]
	v[s-i] = aux

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:28:12) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1


for i in range(s):
	aux = 0
	aux = v[i]
	print('aux', aux)
	v[i] = v[s-i]
	print('vi', v[i])
	v[s-i] = aux
	print('vs', v[s-i])

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:28:26) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1


for i in range(s):
	aux = 0
	aux = v[i]
	print('aux', aux)
	v[i] = v[s-i]
	print('vi', v[i])
	v[s-i] = aux
	print('vs', v[s-i])

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:31:16) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0
	for i in range(s):
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
if size(v)%2 != 0:
	for i in range(s-2):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
File "XXXX", line 6
    if size(v)%2 == 0
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:31:24) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
if size(v)%2 != 0:
	for i in range(s-2):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:32:14) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s-2):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:32:27) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s-2):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- EXECUTION TIME:
1.12033
-- TEST CASE 1:
---- input:
['x','p','m','k','e','c','a']
---- correct output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
---- user output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
-- TEST CASE 2:
---- input:
['f','e','e','d','c','b','a']
---- correct output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
---- user output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
-- TEST CASE 3:
---- input:
['n','l','k','i','e','b']
---- correct output:
['b' 'e' 'i' 'k' 'l' 'n']
---- user output:
aux n
vi b
vs n
aux l
vi e
vs l
aux k
vi i
vs k
aux k
vi i
vs k
aux l
vi e
vs l
['b' 'l' 'k' 'i' 'e' 'n']
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:32:31) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s-2):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:33:10) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range(s-2):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:33:14) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range(s-2):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:33:51) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range(s-2):
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:33:51) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range(s-2):
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- EXECUTION TIME:
1.13577
-- TEST CASE 1:
---- input:
['x','p','m','k','e','c','a']
---- correct output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
---- user output:
['a' 'p' 'm' 'k' 'e' 'c' 'x']
-- TEST CASE 2:
---- input:
['f','e','e','d','c','b','a']
---- correct output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
---- user output:
['a' 'e' 'e' 'd' 'c' 'b' 'f']
-- TEST CASE 3:
---- input:
['n','l','k','i','e','b']
---- correct output:
['b' 'e' 'i' 'k' 'l' 'n']
---- user output:
aux n
vi b
vs n
aux l
vi e
vs l
aux k
vi i
vs k
['b' 'e' 'i' 'k' 'l' 'n']
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:34:08) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range(s-1):
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:34:16) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range(s-1):
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- EXECUTION TIME:
1.16709
-- TEST CASE 1:
---- input:
['x','p','m','k','e','c','a']
---- correct output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
---- user output:
['a' 'p' 'm' 'k' 'e' 'c' 'x']
-- TEST CASE 2:
---- input:
['f','e','e','d','c','b','a']
---- correct output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
---- user output:
['a' 'e' 'e' 'd' 'c' 'b' 'f']
-- TEST CASE 3:
---- input:
['n','l','k','i','e','b']
---- correct output:
['b' 'e' 'i' 'k' 'l' 'n']
---- user output:
aux n
vi b
vs n
aux l
vi e
vs l
aux k
vi i
vs k
aux k
vi i
vs k
['b' 'e' 'k' 'i' 'l' 'n']
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:34:22) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range(s-1):
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:34:35) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range(s-1):
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- EXECUTION TIME:
1.17489
-- TEST CASE 1:
---- input:
['x','p','m','k','e','c','a']
---- correct output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
---- user output:
['a' 'p' 'm' 'k' 'e' 'c' 'x']
-- TEST CASE 2:
---- input:
['f','e','e','d','c','b','a']
---- correct output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
---- user output:
['a' 'e' 'e' 'd' 'c' 'b' 'f']
-- TEST CASE 3:
---- input:
['n','l','k','i','e','b']
---- correct output:
['b' 'e' 'i' 'k' 'l' 'n']
---- user output:
aux n
vi b
vs n
aux l
vi e
vs l
aux k
vi i
vs k
aux k
vi i
vs k
['b' 'e' 'k' 'i' 'l' 'n']
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:34:36) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range(s-1):
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:36:37) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range(s):
		print(i)
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:37:23) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range(s/2):
		print(i)
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:37:27) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range(s/2):
		print(i)
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:37:50) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range((s/2)):
		print(i)
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:38:13) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range(s):
		print(i)
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- EXECUTION TIME:
0.995265
-- TEST CASE 1:
---- input:
['x','p','m','k','e','c','a']
---- correct output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
---- user output:
['a' 'p' 'm' 'k' 'e' 'c' 'x']
-- TEST CASE 2:
---- input:
['f','e','e','d','c','b','a']
---- correct output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
---- user output:
['a' 'e' 'e' 'd' 'c' 'b' 'f']
-- TEST CASE 3:
---- input:
['n','l','k','i','e','b']
---- correct output:
['b' 'e' 'i' 'k' 'l' 'n']
---- user output:
V: 0
aux n
vi b
vs n
1
aux l
vi e
vs l
2
aux k
vi i
vs k
3
aux k
vi i
vs k
4
aux l
vi e
vs l
['b' 'l' 'k' 'i' 'e' 'n']
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:38:15) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range(s):
		print(i)
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:38:25) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range(s - 1):
		print(i)
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:39:18) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range(s - 1):
		print(i)
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:40:26) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range((size(s)/2)):
		print(i)
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:40:45) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1
x = size(v)/2

if size(v)%2 == 0:
	for i in range(x):
		print(i)
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:42:13) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1
x = size(v) - size(v)/2
if size(v)%2 == 0:
	for i in range(x):
		print(i)
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:43:04) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range(s):
		print(i)
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:43:48) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1

if size(v)%2 == 0:
	for i in range(s//2):
		print(i)
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:44:14) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1
x = size(v)//2

if size(v)%2 == 0:
	for i in range(x):
		print(i)
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:44:22) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1
x = size(v)//2

if size(v)%2 == 0:
	for i in range(x):
		print(i)
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- EXECUTION TIME:
1.20746
-- TEST CASE 1:
---- input:
['x','p','m','k','e','c','a']
---- correct output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
---- user output:
['a' 'p' 'm' 'k' 'e' 'c' 'x']
-- TEST CASE 2:
---- input:
['f','e','e','d','c','b','a']
---- correct output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
---- user output:
['a' 'e' 'e' 'd' 'c' 'b' 'f']
-- TEST CASE 3:
---- input:
['n','l','k','i','e','b']
---- correct output:
['b' 'e' 'i' 'k' 'l' 'n']
---- user output:
0
aux n
vi b
vs n
1
aux l
vi e
vs l
2
aux k
vi i
vs k
['b' 'e' 'i' 'k' 'l' 'n']
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:44:26) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1
x = size(v)//2

if size(v)%2 == 0:
	for i in range(x):
		print(i)
		aux = 0
		aux = v[i]
		print('aux', aux)
		v[i] = v[s-i]
		print('vi', v[i])
		v[s-i] = aux
		print('vs', v[s-i])
		

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:44:55) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1
x = size(v)//2

if size(v)%2 == 0:
	for i in range(x):
		print(i)
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux	

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- EXECUTION TIME:
1.01416
-- TEST CASE 1:
---- input:
['x','p','m','k','e','c','a']
---- correct output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
---- user output:
V: ['a' 'p' 'm' 'k' 'e' 'c' 'x']
-- TEST CASE 2:
---- input:
['f','e','e','d','c','b','a']
---- correct output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
---- user output:
V: ['a' 'e' 'e' 'd' 'c' 'b' 'f']
-- TEST CASE 3:
---- input:
['n','l','k','i','e','b']
---- correct output:
['b' 'e' 'i' 'k' 'l' 'n']
---- user output:
V: 0
1
2
['b' 'e' 'i' 'k' 'l' 'n']
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:44:59) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1
x = size(v)//2

if size(v)%2 == 0:
	for i in range(x):
		print(i)
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux	

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:45:14) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1
x = size(v)//2

if size(v)%2 == 0:
	for i in range(x):
		print(i)
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux	

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- EXECUTION TIME:
1.03046
-- TEST CASE 1:
---- input:
['x','p','m','k','e','c','a']
---- correct output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
---- user output:
['a' 'p' 'm' 'k' 'e' 'c' 'x']
-- TEST CASE 2:
---- input:
['f','e','e','d','c','b','a']
---- correct output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
---- user output:
['a' 'e' 'e' 'd' 'c' 'b' 'f']
-- TEST CASE 3:
---- input:
['n','l','k','i','e','b']
---- correct output:
['b' 'e' 'i' 'k' 'l' 'n']
---- user output:
0
1
2
['b' 'e' 'i' 'k' 'l' 'n']
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:45:26) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1
x = size(v)//2

if size(v)%2 == 0:
	for i in range(x):
		print(i)
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux	

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:45:30) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1
x = size(v)//2

if size(v)%2 == 0:
	for i in range(x):
		print(i)
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux	

if size(v)%2 != 0:
	for i in range(s):
		aux = 0
		aux = v[i]
		v[i] = v[s-i]
		v[s-i] = aux
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:45:48) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1
x = size(v)//2


for i in range(x):
	print(i)
	aux = 0
	aux = v[i]
	v[i] = v[s-i]
	v[s-i] = aux	

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:45:53) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1
x = size(v)//2


for i in range(x):
	print(i)
	aux = 0
	aux = v[i]
	v[i] = v[s-i]
	v[s-i] = aux	

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:46:02) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1
x = size(v)//2


for i in range(x):
	print(i)
	aux = 0
	aux = v[i]
	v[i] = v[s-i]
	v[s-i] = aux	

print(v)
-- EXECUTION TIME:
1.28739
-- TEST CASE 1:
---- input:
['x','p','m','k','e','c','a']
---- correct output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
---- user output:
0
1
2
['a' 'c' 'e' 'k' 'm' 'p' 'x']
-- TEST CASE 2:
---- input:
['f','e','e','d','c','b','a']
---- correct output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
---- user output:
0
1
2
['a' 'b' 'c' 'd' 'e' 'e' 'f']
-- TEST CASE 3:
---- input:
['n','l','k','i','e','b']
---- correct output:
['b' 'e' 'i' 'k' 'l' 'n']
---- user output:
0
1
2
['b' 'e' 'i' 'k' 'l' 'n']
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:46:09) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
x = size(v)//2


for i in range(x):
	print(i)
	aux = 0
	aux = v[i]
	v[i] = v[s-i]
	v[s-i] = aux	

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:46:25) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1
x = size(v)//2


for i in range(x):
	print(i)
	aux = 0
	aux = v[i]
	v[i] = v[s-i]
	v[s-i] = aux	

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:46:30) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1
x = size(v)//2


for i in range(x):
	print(i)
	aux = 0
	aux = v[i]
	v[i] = v[s-i]
	v[s-i] = aux	

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:46:33) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1
x = size(v)//2


for i in range(x):
	aux = 0
	aux = v[i]
	v[i] = v[s-i]
	v[s-i] = aux	

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:46:44) 
-- CODE:
from numpy import*

v = array(eval(input("V: ")), dtype=str)
s = size(v) - 1
x = size(v)//2


for i in range(x):
	aux = 0
	aux = v[i]
	v[i] = v[s-i]
	v[s-i] = aux	

print(v)
-- EXECUTION TIME:
1.04348
-- TEST CASE 1:
---- input:
['x','p','m','k','e','c','a']
---- correct output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
---- user output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
-- TEST CASE 2:
---- input:
['f','e','e','d','c','b','a']
---- correct output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
---- user output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
-- TEST CASE 3:
---- input:
['n','l','k','i','e','b']
---- correct output:
['b' 'e' 'i' 'k' 'l' 'n']
---- user output:
['b' 'e' 'i' 'k' 'l' 'n']
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
